load("//tools/build_rules/thrift:thrift.bzl", "thrift_java_library", "thrift_python_library")
load("@io_bazel_rules_scala//scala:scala_cross_version_select.bzl", "select_for_scala_version")

thrift_python_library(
    name = "api-models-py",
    srcs = ["api.thrift"],
    namespace = ".",
    visibility = ["//visibility:public"],
)

thrift_java_library(
    name = "api-models-java",
    srcs = ["api.thrift"],
    visibility = ["//visibility:public"],
)

java_library(
    name = "api-models",
    srcs = [":api-models-java"],
    visibility = ["//visibility:public"],
    deps = [
        maven_artifact("javax.annotation:javax.annotation.api"),
        maven_artifact("org.apache.thrift:libthrift"),
    ],
)

scala_library(
    name = "api-lib",
    srcs = glob(
        ["*.scala"],
    ) + select_for_scala_version(
        before_2_12 = [
            "util/ScalaVersionSpecificCollectionsConverter211.scala",
        ],
        between_2_12_and_2_13 = [
            "util/ScalaVersionSpecificCollectionsConverter212.scala",
        ],
        since_2_13 = [
            "util/ScalaVersionSpecificCollectionsConverter213.scala",
        ],
    ),
    visibility = ["//visibility:public"],
    deps = [
        ":api-models",
        "//third_party/java/spark:spark-exec",
        maven_artifact("com.fasterxml.jackson.core:jackson-core"),
        maven_artifact("com.fasterxml.jackson.core:jackson-databind"),
        maven_artifact("org.apache.thrift:libthrift"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.slf4j:slf4j-log4j12"),
    ] + select_for_scala_version(
        before_2_13 = [
            scala_artifact("org.scala-lang.modules:scala-collection-compat"),
        ],
        since_2_13 = [
            scala_artifact("org.scala-lang.modules:scala-parallel-collections"),
        ],
    ),
)
