java_library(
    name = "service",
    srcs = glob(
        ["**/*.java"],
        exclude = ["handlers/*Test.java"],
    ),
    resources = [
        "resources/example_config.json",
        "resources/logback.xml",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//ai/chronon/api:api-lib",
        "//ai/chronon/online",
        maven_artifact("com.fasterxml.jackson.core:jackson-annotations"),
        maven_artifact("com.fasterxml.jackson.core:jackson-core"),
        maven_artifact("com.fasterxml.jackson.core:jackson-databind"),
        maven_artifact("org.scala-lang:scala-library"),
        maven_artifact("io.micrometer:micrometer-core"),
        maven_artifact("io.micrometer:micrometer-registry-statsd"),
        maven_artifact("io.vertx:vertx-core"),
        maven_artifact("io.vertx:vertx-config"),
        maven_artifact("io.vertx:vertx-web"),
        maven_artifact("io.vertx:vertx-micrometer-metrics"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.slf4j:slf4j-log4j12"),
    ],
)

scala_test_suite(
    name = "test",
    srcs = glob(["handlers/*Test.java"]),
    visibility = ["//visibility:public"],
    deps = [
        ":service",
        "//ai/chronon/online",
        scala_artifact("org.scalatestplus:mockito-3-4"),
        maven_artifact("org.mockito:mockito-core"),
        maven_artifact("junit:junit"),
        maven_artifact("com.novocode:junit-interface"),
        maven_artifact("io.vertx:vertx-unit"),
        maven_artifact("io.vertx:vertx-core"),
        maven_artifact("io.vertx:vertx-web"),
    ],
)
