load("@rules_python//python:py_test.bzl", "py_test")
load("@pypi//:requirements.bzl", "requirement")
load("//tools/build_rules/python:pytest_suite.bzl", "pytest_suite")

pytest_suite(
    name = "api_test",
    srcs = glob(["**/*.py"]),
    imports = [
        "api/py/",
    ],
    deps = [
        "//api/py/ai/chronon:api_py",
        "//api/thrift:api-models-py",
    ],
)
