load("@io_bazel_rules_scala//scala:scala_cross_version_select.bzl", "select_for_scala_version")

scala_test_suite(
    name = "test",
    srcs = glob(["*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
        "//ai/chronon/api:api-models",
        "//ai/chronon/api:api-lib",
        "//third_party/java/spark:spark-exec",
        maven_artifact("com.fasterxml.jackson.core:jackson-core"),
        maven_artifact("com.fasterxml.jackson.core:jackson-databind"),
        maven_artifact("org.apache.thrift:libthrift"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.slf4j:slf4j-log4j12"),
        maven_artifact("junit:junit"),
        maven_artifact("com.novocode:junit-interface"),
        scala_artifact("org.scalatestplus:mockito-3-4"),
        maven_artifact("org.mockito:mockito-core"),
        scala_artifact(
            "org.scala-lang.modules:scala-collection-compat",
        ),
    ] + select_for_scala_version(
        since_2_13 = [
            maven_artifact("org.scala-lang.modules:scala-parallel-collections_2.13"),
        ],
    ),
)
