scala_test_suite(
    name = "test",
    srcs = glob(["*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
        "//ai/chronon/aggregator",
        "//ai/chronon/api:api-lib",
        "//ai/chronon/api:api-models",
        "//ai/chronon/flink",
        "//ai/chronon/online",
        "//third_party/java/spark:spark-exec",
        maven_artifact("org.apache.flink:flink-core"),
        maven_artifact("org.apache.flink:flink-metrics-core"),
        maven_artifact("org.apache.flink:flink-streaming-java"),
        scala_artifact("org.apache.flink:flink-scala"),
        scala_artifact("org.apache.flink:flink-streaming-scala"),
        maven_artifact("org.apache.flink:flink-metrics-dropwizard"),
        maven_artifact("io.dropwizard.metrics:metrics-core"),
        maven_artifact("org.apache.thrift:libthrift"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.slf4j:slf4j-log4j12"),
        scala_artifact("org.scala-lang.modules:scala-collection-compat"),
    ],
)
