scala_library(
    name = "test-lib",
    srcs = glob(["*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
        "//ai/chronon/aggregator",
        "//ai/chronon/api:api-lib",
        "//ai/chronon/api:api-models",
        "//ai/chronon/flink",
        "//ai/chronon/online",
        "//third_party/java/spark:spark-exec",
        maven_artifact("org.apache.flink:flink-core"),
        maven_artifact("org.apache.flink:flink-core-tests"),
        maven_artifact("org.apache.flink:flink-runtime-tests"),
        maven_artifact("org.apache.flink:flink-test-utils"),
        maven_artifact("org.apache.flink:flink-metrics-core"),
        maven_artifact("org.apache.flink:flink-streaming-java"),
        scala_artifact("org.apache.flink:flink-scala"),
        scala_artifact("org.apache.flink:flink-streaming-scala"),
        maven_artifact("org.apache.flink:flink-metrics-dropwizard"),
        scala_artifact("org.scalatest:scalatest-matchers-core"),
        scala_artifact("org.scalatest:scalatest-core"),
        maven_artifact("junit:junit"),
        maven_artifact("org.scalatest:scalatest-compatible"),
        scala_artifact("org.scalatest:scalatest-shouldmatchers"),
        scala_artifact("org.scalactic:scalactic"),
        scala_artifact("org.scala-lang.modules:scala-java8-compat"),
        scala_artifact("com.fasterxml.jackson.module:jackson-module-scala"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.slf4j:slf4j-log4j12"),
        scala_artifact("org.scalatestplus:mockito-3-4"),
        maven_artifact("org.mockito:mockito-core"),
        maven_artifact("io.dropwizard.metrics:metrics-core"),
        maven_artifact("org.apache.thrift:libthrift"),
        scala_artifact("org.scala-lang.modules:scala-collection-compat"),
    ],
)

scala_test_suite(
    name = "test",
    srcs = glob(["*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
        ":test-lib",
        "//ai/chronon/aggregator",
        "//ai/chronon/api:api-lib",
        "//ai/chronon/api:api-models",
        "//ai/chronon/flink",
        "//ai/chronon/online",
        "//third_party/java/spark:spark-exec",
        maven_artifact("org.apache.flink:flink-core"),
        maven_artifact("org.apache.flink:flink-core-tests"),
        maven_artifact("org.apache.flink:flink-runtime-tests"),
        maven_artifact("org.apache.flink:flink-metrics-core"),
        maven_artifact("org.apache.flink:flink-streaming-java"),
        scala_artifact("org.apache.flink:flink-scala"),
        maven_artifact("org.apache.flink:flink-test-utils"),
        scala_artifact("org.apache.flink:flink-streaming-scala"),
        maven_artifact("org.apache.flink:flink-metrics-dropwizard"),
        scala_artifact("org.scalatest:scalatest-matchers-core"),
        scala_artifact("org.scalatest:scalatest-core"),
        maven_artifact("junit:junit"),
        maven_artifact("org.scalatest:scalatest-compatible"),
        scala_artifact("org.scalatest:scalatest-shouldmatchers"),
        scala_artifact("org.scalactic:scalactic"),
        scala_artifact("org.scala-lang.modules:scala-java8-compat"),
        scala_artifact("com.fasterxml.jackson.module:jackson-module-scala"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.slf4j:slf4j-log4j12"),
        scala_artifact("org.scalatestplus:mockito-3-4"),
        maven_artifact("org.mockito:mockito-core"),
        maven_artifact("io.dropwizard.metrics:metrics-core"),
        maven_artifact("org.apache.thrift:libthrift"),
        scala_artifact("org.scala-lang.modules:scala-collection-compat"),
    ],
)
