scala_library(
    name = "mongo-online-impl",
    srcs = glob(["*.scala"]),
    resources = [
        "resources/logback.xml",
    ],
    deps = [
        "//ai/chronon/aggregator",
        "//ai/chronon/api:api-lib",
        "//ai/chronon/api:api-models",
        "//ai/chronon/online",
        "//third_party/java/spark:spark-exec",
        scala_artifact("org.mongodb.scala:mongo-scala-driver"),
        scala_artifact("org.mongodb.scala:mongo-scala-bson"),
        maven_artifact("org.mongodb:mongodb-driver-core"),
        maven_artifact("org.mongodb:bson"),
        maven_artifact("io.dropwizard.metrics:metrics-core"),
        maven_artifact("org.reactivestreams:reactive-streams"),
        maven_artifact("org.mongodb:mongodb-driver-reactivestreams"),
        maven_artifact("org.apache.thrift:libthrift"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.slf4j:slf4j-log4j12"),
        scala_artifact("org.scala-lang.modules:scala-collection-compat"),
    ],
)
