scala_library(
    name = "test-lib",
    srcs = glob(["**/*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
        "//ai/chronon/aggregator",
        "//ai/chronon/aggregator/test:test-lib",
        "//ai/chronon/api:api-lib",
        "//ai/chronon/api:api-models",
        "//ai/chronon/online",
        "//ai/chronon/spark",
        "//third_party/java/spark:spark-exec",
        maven_artifact("com.google.code.gson:gson"),
        maven_artifact("org.apache.thrift:libthrift"),
        maven_artifact("com.google.guava:guava"),
        maven_artifact("junit:junit"),
        maven_artifact("com.novocode:junit-interface"),
        scala_artifact("org.rogach:scallop"),
        maven_artifact("commons.io:commons-io"),
        maven_artifact("commons.lang:commons-lang"),
        scala_artifact("org.scalatest:scalatest-matchers-core"),
        scala_artifact("org.scalatest:scalatest-core"),
        maven_artifact("org.scalatest:scalatest-compatible"),
        scala_artifact("org.scalatest:scalatest-shouldmatchers"),
        scala_artifact("org.scalactic:scalactic"),
        scala_artifact("org.scala-lang.modules:scala-java8-compat"),
        scala_artifact("com.fasterxml.jackson.module:jackson-module-scala"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.slf4j:slf4j-log4j12"),
        scala_artifact("org.scalatestplus:mockito-3-4"),
        maven_artifact("org.mockito:mockito-core"),
    ],
)

scala_test_suite(
    name = "test",
    srcs = glob(["**/*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
        ":test-lib",
        "//ai/chronon/aggregator",
        "//ai/chronon/aggregator/test:test-lib",
        "//ai/chronon/api:api-lib",
        "//ai/chronon/api:api-models",
        "//ai/chronon/online",
        "//ai/chronon/spark",
        "//third_party/java/spark:spark-exec",
        scala_artifact("org.scala-lang.modules:scala-java8-compat"),
        maven_artifact("junit:junit"),
        maven_artifact("com.novocode:junit-interface"),
        maven_artifact("commons.io:commons-io"),
        maven_artifact("com.google.guava:guava"),
        scala_artifact("com.fasterxml.jackson.module:jackson-module-scala"),
        maven_artifact("com.google.code.gson:gson"),
        scala_artifact("org.rogach:scallop"),
        scala_artifact("org.scalatestplus:mockito-3-4"),
        maven_artifact("org.mockito:mockito-core"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.slf4j:slf4j-log4j12"),
    ],
)
