load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")
load("@io_bazel_rules_scala//scala:scala_cross_version_select.bzl", "select_for_scala_version")

scala_library(
    name = "test-lib",
    srcs = select_for_scala_version(before_2_12 = [
               # For Scala 2.11.x
               "//api/src/main/scala-2.11/scala/util:scala_version_specific_collections_converter",
           ]) +
           select_for_scala_version(before_2_13 = [
               # For Scala 2.12.x
               "//api/src/main/scala-2.12/scala/util:scala_version_specific_collections_converter",
           ]) +
           select_for_scala_version(after_2_12 = [
               # For Scala 2.13.x
               "//api/src/main/scala-2.13/scala/util:scala_version_specific_collections_converter",
           ]),
    deps = [
        "@maven//:org_scala_lang_modules_scala_parallel_collections_2_13",
    ],
)

scala_library(
    name = "api-lib",
    srcs = glob(["*.scala"]) +
           select_for_scala_version(before_2_12 = [
               # For Scala 2.11.x
               "//api/src/main/scala-2.11/scala/util:scala_version_specific_collections_converter",
           ]) +
           select_for_scala_version(before_2_13 = [
               # For Scala 2.12.x
               "//api/src/main/scala-2.12/scala/util:scala_version_specific_collections_converter",
           ]) +
           select_for_scala_version(after_2_12 = [
               # For Scala 2.13.x
               "//api/src/main/scala-2.13/scala/util:scala_version_specific_collections_converter",
           ]),
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:org_scala_lang_modules_scala_parallel_collections_2_13",
    ],
)
